Fix widgets alignment

--- a/css/sp123-omega.styles.css
+++ b/css/sp123-omega.styles.css
@@ -245,7 +245,10 @@ label {
             -ms-flex: 1 1 300px;
                 flex: 1 1 300px; } }
     .blog-type-page #main-content .panel-myriad-layout .sidebar-content div:first-child {
-      margin-top: 0; }
+      margin-top: 0;
+      position: absolute;
+      top: 10px;
+      right: 10px; }
   .blog-type-page #main-content .panel-myriad-layout .view-display-id-panel_pane_1 .view-content {
     padding: 0.5em; }
   .blog-type-page #main-content .panel-myriad-layout .view-display-id-panel_pane_2 .pager {
@@ -3368,4 +3371,5 @@ img.testimonial-image {
 
 #overlay-content #page-title .limiter {
   width: auto; }
+
 /*# sourceMappingURL=sp123-omega.styles.css.map */
