--- a/sass/components/_blog_pages.scss
+++ b/sass/components/_blog_pages.scss
@@ -82,6 +82,9 @@
 
 			div:first-child {
 				margin-top: 0;
+				position: absolute;
+				top: 10px;
+				right: 10px;
 			}
 		}
 
